# connectome-graph-analysis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: README.md
reference/: command_interneurons.csv  functional_labels.md
scripts/: 00_fetch_celegans.py  01_build_graph.py  02_run_metrics.py  03_validate_vs_networkx.py  04_hub_recovery.py
src/connectome_graph/: __init__.py
src/connectome_graph/analysis/: __init__.py  ground_truth.py  hub_recovery.py
src/connectome_graph/graph/: __init__.py  centrality.py  community.py  distributions.py  graph.py  nulls.py  smallworld.py  traversal.py
src/connectome_graph/io/: __init__.py  celegans.py  flywire.py
src/connectome_graph/validation/: __init__.py  networkx_parity.py
tests/: test_centrality.py  test_nulls.py  test_parity.py  test_traversal.py
