[project]
name = "connectome-graph-analysis"
version = "0.1.0"
description = "From-scratch graph algorithms applied to the C. elegans connectome, validated against NetworkX."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kaitlin Moore" }]
requires-python = ">=3.11,<3.12"

# Runtime deps are deliberately tiny. numpy is used only for dense linear
# algebra (matvecs in power iteration); it is NOT a graph library, so it does
# not violate the from-scratch rule in CLAUDE.md.
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
# networkx lives here, not in runtime deps, to make the quarantine explicit:
# it is a validation/test-time cross-check only. See CLAUDE.md.
dev = [
    "networkx>=3.2",
    "scipy>=1.11",   # networkx's pagerank/eigenvector backends need it (parity only)
    "pytest>=8.0",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/connectome_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
